# utcpio

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README.zh_CN.md  build.rs
.cargo/: config.toml
doc/: cpio.md  utcpio.md
gnu/: Cargo.toml  argp.rs  argp_version_etc.rs  basename_lgpl.rs  cloexec.rs  dirname.rs  dirname_lgpl.rs  error.rs  fdutimensat.rs  full_write.rs  gettime.rs  intprops.rs  lib.rs  progname.rs  quotearg.rs  safe_read.rs  safe_write.rs  stripslash.rs  umaxtostr.rs  util.rs  version_etc.rs  xalloc_die.rs  xmalloc.rs
gnu/src/: lib.rs  util.rs
pax/: Cargo.toml  fatal.rs  lib.rs  paxerror.rs  paxexit.rs  paxexit_status.rs  paxlib.rs  paxnames.rs  rmt.rs  rtapelib.rs  sysdep.rs
po/: Makefile  Makefile.in
rmt/: Cargo.toml  rmt.rs
src/: appargs.rs  copyin.rs  copyout.rs  copypass.rs  cpiohdr.rs  dstring.rs  externs.rs  filemode.rs  filetype.rs  global.rs  idcache.rs  initramfs.rs  main.rs  tar.rs  userspec.rs  util.rs
tests/: basic.rs  error_handling.rs  integration.rs  modes.rs  options.rs  test_cpio.py
