[workspace]
members = ["gnu", "pax", "rmt"] 
resolver = "2"

[package]
name = "utcpio"
version = "1.0.0"
authors = ["zhanghaidong  <zhanghaidong@uniontech.com>"]
description = "A simple cpio implementation"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"  # 指定构建脚本

[dependencies]
libc = "0.2"
nix = "0.29"
gnu = { path = "./gnu" }
pax = { path = "./pax" }
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
users = "0.11"
chrono = "0.4"

[[bin]]
name = "utcpio"
path = "src/main.rs"
