[package]
name = "pax"               # 包名设为 pax，生成的库名为 libpax.a
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"


[lib]
path = "lib.rs"
crate-type = ["rlib"]  # 声明为静态库

[dependencies]
gnu = { path = "../gnu" }
lazy_static = "1.5.0"
nix = { version = "0.29", features = ["user"] }
libc = "0.2.170"
users = "0.11.0"