[package]
name = "rmt"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gnu = { path = "../gnu" }
nix = { version = "0.29", features = ["fs","ioctl"] }
lazy_static = "1.5"
clap = { version = "4.5", features = ["derive"] }


[[bin]]
name = "rmt"
path = "rmt.rs"

[features]
mtio = []

[package.metadata]
PACKAGE_NAME = "rmt"
VERSION = "1.0"
PACKAGE_BUGREPORT = "your.email@example.com"

